# WebToInk

./: .gitignore  CommandLineParser.hs  Constants.hs  Download.hs  DownloadError.hs  HtmlBookToMobi.hs  HtmlPages.hs  Images.hs  Install.sh  OpfGeneration.hs  Readme.md  Restructure.txt  TocGeneration.hs  Types.hs  Utils.hs  WebToMobi.hs  analyzeUrls.txt  clean-real.sh  index.html  make-datalist.sh  make-learn-you.sh  make-real-world.sh  web-kindle.cabal
docs/: BooksToConvert.md  Libs.md  RestServer.md  Setup-HaskellAndGit.md  Setup-Nginx.md  Setup-SshAndIptables.md  Setup-WebToInk.md
etc/init.d/: webtoink
etc/nginx/: nginx.conf  sites-available-webtoink
nginx/: nginx.conf  sites-enabled-webtoink
research/: Client.md  RestServer.md
scripts/: make-Data.ByteString.Lazy.sh  make-Data.ByteString.sh  make-controlmonad.sh  make-datalist.sh  make-dealingwithbinarydata.sh  make-dropboxapi.sh  make-ghcuserguide.sh  make-internetsockets.sh  make-learn-you.sh  make-mp3decoder.sh  make-natural-language-processing.sh  make-numerichaskellvectortutorial.hs  make-real-world.sh  make-tcpserverinhaskell.sh
src/: .gitignore  Application.hs  Converter.hs  Download.hs  Foundation.hs  HtmlBookToMobi.hs  LICENSE  Server.hs  Types.hs  WebToInk.cabal  WebToKindle.cabal  devel.hs
src/Converter/: CommandLineParser.hs  Constants.hs  Converter.hs  Download.hs  HtmlPages.hs  Images.hs  OpfGeneration.hs  TocGeneration.hs  Types.hs  Utils.hs
src/Data/String/: Utils.hs
src/Handler/: Convert.hs  InitUrl.hs  Root.hs
src/HtmlBookToMobi/: Images.hs  Utils.hs
src/WebConverter/: HtmlPages.hs  Images.hs  TocGeneration.hs
src/WebConverter/Data/List/: Utils.hs
src/WebToInk/: Settings.hs
src/WebToInk/Handler/: Root.hs
src/WebToInk/config/: client_session_key.aes  settings.yml
src/WebToInk/deploy/: Procfile
src/WebToInk/spikes/: HeadRequestor.hs  WarpServer.hs
src/WebToInk/spikes/OrigHtml/: WebToKindle.html
src/WebToInk/spikes/WebServer/: YesodForms.hs  client_session_key.aes
src/WebToInk/spikes/WebServer/YesodWikiChatExample/: client_session_key.aes
src/WebToInk/templates/: homepage.julius
src/config/: client_session_key.aes  routes  settings.yml  sqlite.yml
src/deploy/: Procfile
src/public/: index.html
src/public/stylesheets/: style.css
src/spikes/: DownloadHtmlWithCorrectEncoding.hs  TCPWebServer.hs  WarpServer.hs
src/spikes/OrigHtml/css/: WebToKindle.css
src/spikes/OrigHtml/pages/: contact_page.html
src/spikes/WebServer/: CustomServer.hs  SCGIServer.hs  Server.hs  YesodPrettyYaml.hs  YesodRouts.hs  YesodServer.hs  fcgi-install.sh
src/spikes/WebServer/YesodWikiChatExample/: Chat.hs  Wiki.hs
src/static/: index.html
src/static/css/: homepage.css
src/static/stylesheets/: style.css
src/static/tmp/: VTQtOys5.css  xVBYmhAB.js
src/templates/: default-layout-wrapper.hamlet  default-layout.hamlet  default-layout.lucius  header.hamlet  homepage.hamlet  homepage.julius  homepage.lucius
src/webtoink-converter/WebToInk/: Converter.hs
src/webtoink-converter/WebToInk/Converter/: CommandLineParser.hs  ConverterService.hs  Download.hs  HtmlPages.hs  Images.hs  OpfGeneration.hs  TocGeneration.hs  Types.hs  Utils.hs
webtoink/: .gitignore  Application.hs  Foundation.hs  Import.hs  Settings.hs  WebToInk.cabal  client_session_key.aes  devel.hs  install.sh  sources.txt
webtoink-converter/: .gitignore  LICENSE  webtoink-converter.cabal
webtoink-converter/Data/List/: Utils.hs
webtoink-converter/WebToInk/: Converter.hs  TODO.md
webtoink-converter/WebToInk/Converter/: Constants.hs  ConverterService.hs  Download.hs  Exceptions.hs  HtmlPages.hs  Images.hs  Logger.hs  OpfGeneration.hs  Utils.hs
webtoink/Handler/: AboutUs.hs  Book.hs  Convert.hs  InitUrl.hs  ReportIssue.hs  Root.hs  Utils.hs
webtoink/config/: client_session_key.aes  models  routes  settings.yml  settings_deploy.yml  sqlite.yml
webtoink/deploy/: Procfile
webtoink/spikes/: DownloadHtmlWithCorrectEncoding.hs
webtoink/spikes/Spin/: index.html  spinner.css
webtoink/spikes/WebServer/: YesodAjax.lhs  YesodServer.hs
webtoink/static/: .gitignore
webtoink/static/books/: .gitignore
webtoink/static/css/: homepage.css
webtoink/templates/: aboutUs.hamlet  default-layout-wrapper.hamlet  default-layout.hamlet  default-layout.lucius  homepage.hamlet  homepage.julius  reportIssue.hamlet
webtoink/tests/: HomeTest.hs
