name:              web-kindle
version:           0.1.0
license:           BSD3
license-file:      LICENSE
category:          Web
author:            Thorsten Lorenz
maintainer:        Thorsten Lorenz
synopsis:          The greatest kindle generator ever
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://github.com/thlorenz/HtmlBookToMobi
bug-reports:       http://github.com/thlorenz/HtmlBookToMobi/issues
description:       Convert html books/blogs into .mobi files 

flag developer
  description: operate in developer mode
  default: False

library
  build-depends: 
    http-enumerator,
    http-conduit,
    tagsoup

  if flag(developer)
    ghc-options: -Werror
    ghc-prof-options: -auto-all

  ghc-options:      -Wall

source-repository head
  type:     git
  location: http://github.com/thlorenz/HtmlBookToMobi
