name:              WebToKindle
version:           0.0.0
license:           BSD3
license-file:      LICENSE
category:          Web
author:            Lorenz & Capistrano
maintainer:        Lorenz & Capistrano
synopsis:          The greatest kindle generator ever
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://github.com/thlorenz/HtmlBookToMobi
bug-reports:       http://github.com/thlorenz/HtmlBookToMobi/issues
description:       Convert html books/blogs into .mobi files 

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False

    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles

                     -- Handlers
                     Handler.Utils
                     Handler.Root
                     Handler.InitUrl
                     Handler.Convert
            

                     -- END Yesod specific

                     Converter
                     Converter.CommandLineParser
                     Converter.Constants
                     Converter.Download
                     Converter.HtmlPages
                     Converter.Images
                     Converter.OpfGeneration
                     Converter.TocGeneration
                     Converter.Types
                     Converter.Utils
                     Data.List.Utils
                     Data.String.Utils

    ghc-options:   -Wall -threaded -O0
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls

executable         WebToKindle
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 0.10       && < 0.11
                 , yesod-core                    >= 0.10       && < 0.11
                 , yesod-auth                    >= 0.8        && < 0.9
                 , yesod-static                  >= 0.10       && < 0.11
                 , yesod-default                 >= 0.6        && < 0.7
                 , yesod-form                    >= 0.4        && < 0.5
                 , mime-mail                     >= 0.3.0.3    && < 0.5
                 , clientsession                 >= 0.7.3      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 0.8        && < 0.9
                 , persistent-sqlite             >= 0.8        && < 0.9
                 , template-haskell
                 , hamlet                        >= 0.10       && < 0.11
                 , shakespeare-css               >= 0.10       && < 0.11
                 , shakespeare-js                >= 0.11       && < 0.12
                 , shakespeare-text              >= 0.11       && < 0.12
                 , hjsmin                        >= 0.0.14     && < 0.1
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.0        && < 1.2
                 , yaml                          >= 0.5        && < 0.6
                 , http-conduit                  >= 1.2        && < 1.3
                
                 -- END Yesod framework dependencies --------------

                 , tagsoup
                 , http-enumerator                >= 0.7       && < 0.8
                 , HUnit                          >= 1.2       && < 1.3
                 , directory                      >= 1.1       && < 1.2
                 , filepath                       >= 1.2       && < 1.3
                 , transformers                   >= 0.2       && < 0.3
                 , utf8-string                    >= 0.3       && < 0.4
                 , mtl                            >= 2.0       && < 2.2
                 , regex-compat                   >= 0.9       && < 1.0

