name:              WebToInk
version:           0.0.0
license:           BSD3
license-file:      LICENSE
category:          Web
author:            Lorenz & Capistrano
maintainer:        Lorenz & Capistrano
synopsis:          The greatest ebook generator ever
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://github.com/thlorenz/WebToInk
bug-reports:       http://github.com/thlorenz/WebToInk/issues
description:       Convert html books/blogs into .mobi, .epub, .pdf files 

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(library-only)
        Buildable: True
    else
        Buildable: False

    exposed-modules: Application
    other-modules:   Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles

                     -- Handlers
                     Handler.Utils
                     Handler.Root
                     Handler.AboutUs
                     Handler.ReportIssue
                     Handler.InitUrl
                     Handler.Convert

    ghc-options:   -Wall -threaded -O0
    cpp-options:   -DDEVELOPMENT

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls

executable         WebToInk
    if flag(library-only)
        Buildable: False

    if flag(dev)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    main-is:       main.hs

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.0.1.5    && < 1.1
                
                 -- END Yesod framework dependencies --------------

                 , webtoink-converter
                 , filepath                      >= 1.2      && < 1.3

                 -- Fix versioning issues
                    -- cryptocipher 0.3.1 requires cpu that satisfies ==0.1.* right now there is no package
                    -- need to install cpu from https://github.com/vincenthz/hs-cpu
