name:              WebToInk
version:           0.0.0
license:           BSD3
license-file:      LICENSE
category:          Web
author:            Lorenz & Capistrano
maintainer:        Lorenz & Capistrano
synopsis:          The greatest ebook generator ever
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://github.com/thlorenz/WebToInk
bug-reports:       http://github.com/thlorenz/WebToInk/issues
description:       Convert html books/blogs into .mobi, .epub, .pdf files 

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development

                     -- Handlers
                     Handler.Utils
                     Handler.Root
                     Handler.AboutUs
                     Handler.ReportIssue
                     Handler.InitUrl
                     Handler.Convert

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -threaded -O0
    else
        ghc-options:   -Wall -threaded -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction

    build-depends: base                          >= 4          && < 5
                 , yesod-platform                >= 1.0        && < 1.1
                 , yesod                         >= 1.0        && < 1.1
                 , yesod-core                    >= 1.0        && < 1.1
                 , yesod-auth                    >= 1.0        && < 1.1
                 , yesod-static                  >= 1.0        && < 1.1
                 , yesod-default                 >= 1.0        && < 1.1
                 , yesod-form                    >= 1.0        && < 1.1
                 , yesod-test                    >= 0.2        && < 0.3
                 , clientsession                 >= 0.7.3      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 0.9        && < 0.10
                 , persistent-sqlite             >= 0.9        && < 0.10
                 , template-haskell
                 , hamlet                        >= 1.0        && < 1.1
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0        && < 1.1
                 , shakespeare-text              >= 1.0        && < 1.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.2        && < 1.3
                 , yaml                          >= 0.7        && < 0.8
                 , http-conduit                  >= 1.4        && < 1.5
                 , directory                     >= 1.1        && < 1.2
                 , warp                          >= 1.2        && < 1.3

                 -- END Yesod framework dependencies --------------

                 -- WebtoInk other dependencies
                    , webtoink-converter
                    , filepath                      >= 1.2      && < 1.3

                 -- Fix versioning issues
                    -- cryptocipher 0.3.1 requires cpu that satisfies ==0.1.* right now there is no package
                    -- need to install cpu from https://github.com/vincenthz/hs-cpu

executable         WebToInk
    if flag(library-only)
        Buildable: False

    main-is:           ../main.hs
    hs-source-dirs:    dist
    build-depends:     base
                     , WebToInk
                     , yesod-default

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall
    extensions:        TemplateHaskell
                       QuasiQuotes
                       OverloadedStrings
                       NoImplicitPrelude
                       CPP
                       OverloadedStrings
                       MultiParamTypeClasses
                       TypeFamilies
                       GADTs
                       GeneralizedNewtypeDeriving
                       FlexibleContexts

    build-depends: base
                 , WebToInk
                 , yesod-test
                 , yesod-default
                 , yesod-core
